<resources>
    <string name="API_KEY" translatable="false">*;ltpr@bjFH6855Pt]dd0@.*</string>
    <string name="app_name">ACIUD</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="start">Start</string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="registration_page">Registration Page</string>
    <string name="name">Name</string>
    <string name="paternal_surname">Paternal Surname</string>
    <string name="maternal_surname">Maternal Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="street">Street</string>
    <string name="locality">Locality</string>
    <string name="suburb">Suburb</string>
    <string name="gps_location">GPS Location</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="responsible">Responsible</string>
    <string name="operator">Operator</string>
    <string name="street_number">Street #</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="section">Section</string>
    <string name="lifting" translatable="false">LEVANTAMIENTOS</string>
    <string name="location">Location</string>
    <string name="observations">Observations</string>
    <string name="take_photo">Take Photo</string>
    <string name="next">Next</string>
    <string name="date_hour_format" translatable="false">yyyyMMdd_HHmmss</string>
    <string name="file_provider_package" translatable="false">com.example.android.fileprovider</string>
    <string name="validate_information">Verifica Información</string>
    <string name="label_rol">Rol</string>
    <string name="label_permission">permission</string>
    <string name="label_active">Activo</string>
    <string name="label_admin">Admin</string>
    <string name="label_capture">Capturar</string>
    <string name="label_modify">Modificar</string>
    <string name="support_given">Apoyos Proporcionados</string>
    <string name="options">Opciones</string>
    <string name="map">Mapa</string>
    <string name="visualize">Visualizar</string>
</resources>